--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,27 +1,32 @@
-<h1>All Statuses</h1>
+<h2>All Statuses</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row">
+  <% @statuses.each do |status| %>
+    <div class="col-xs-6 col-md-3">
+      <div class="box panel panel-primary">
+        <div class="panel-heading center">
+          <h4><strong><%= status.name %></strong></h4>
+        </div>
+        <div class="panel-body">
+          <p><%= status.content %></p>
+        </div>
+        <div class="panel-footer">
+          <%= link_to status do %>
+            <span class="glyphicon glyphicon-eye-open"></span> View
+          <% end %>
+          -
+          <%= link_to edit_status_path(status) do %>
+            <span class="glyphicon glyphicon-edit"></span> Edit
+          <% end %>
+          -
+          <%= link_to status, method: :delete, data: { confirm: 'Are you sure?' } do %>
+            <span class="glyphicon glyphicon-trash"></span> Delete
+          <% end %>
+        </div>
+      </div>
+    </div>
+  <% end %> 
+</div>
 
-  <tbody>
-    <% @statuses.each do |status| %>
-      <tr>
-        <td><%= status.name %></td>
-        <td><%= status.content %></td>
-        <td><%= link_to 'View', status %></td>
-        <td><%= link_to 'Edit', edit_status_path(status) %></td>
-        <td><%= link_to 'Delete', status, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
-
-<%= link_to 'New Status', new_status_path %>
+<%= link_to 'New Status', new_status_path, class: "btn btn-primary" %>
