--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -1,14 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%= link_to statuses_path do %>
+	<span class="glyphicon glyphicon-chevron-left"><strong>Back</strong></span>
+<% end %>
 
-<p>
-  <strong>Name:</strong>
-  <%= @status.name %>
-</p>
-
-<p>
-  <strong>Content:</strong>
-  <%= @status.content %>
-</p>
-
-<%= link_to 'Edit', edit_status_path(@status) %> |
-<%= link_to 'Back', statuses_path %>
+<div class="row">
+	<div class="col-md-offset-2 col-md-8">
+		<div class="panel panel-default">
+			<div class="panel-heading center">
+				<strong><%= @status.name %></strong>
+			</div>
+			<div class="panel-body">
+				<p><%= @status.content %></p>
+			</div>
+			<div class="panel-footer">
+        <%= link_to edit_status_path(@status) do %>
+          <span class="glyphicon glyphicon-edit"></span> Edit
+        <% end %>
+        -
+        <%= link_to @statuses_path, method: :delete, data: { confirm: 'Are you sure?'} do %>
+          <span class="glyphicon glyphicon-trash"></span> Delete
+        <% end %>
+			</div>
+		</div>
+	</div>
+</div>
