--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -14,6 +14,15 @@ $jumbotron-bg:                                         white;
      text-align: center;
 }
 
+.right {
+	float: right;
+}
+
+.time {
+	text-decoration: none;
+	color: white;
+}
+
 .navbar-brand {
      font-weight: bold;
 }
