--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,6 +1,12 @@
 <div class="page-header">
   <h2>All Statuses</h2>
 </div>
+
+<div>
+  <%= link_to 'Post a New Status', new_status_path, class: "btn btn-primary" %>
+</div>
+<hr>
+
 <div class="row">
   <% @statuses.each do |status| %>
     <div class="col-xs-6 col-md-3">
@@ -14,7 +20,7 @@
         <div class="panel-footer">
           <%= link_to time_ago_in_words(status.created_at) + ' ago', status %>
           <hr>
-          <div class="admin">
+          <span class="admin">
             <%= link_to edit_status_path(status) do %>
               <span class="glyphicon glyphicon-edit"></span> Edit
             <% end %>
@@ -22,7 +28,7 @@
             <%= link_to status, method: :delete, data: { confirm: 'Are you sure?' } do %>
               <span class="glyphicon glyphicon-trash"></span> Delete
             <% end %>
-          </div>
+          </span>
         </div>
       </div>
     </div>
@@ -30,4 +36,3 @@
 </div>
 
 
-<%= link_to 'New Status', new_status_path, class: "btn btn-primary" %>
