--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@status) do |f| %>
+<%= simple_form_for(@status, html: {class: "form-horizontal"}, wrapper: :horizontal_form) do |f| %>
   <% if @status.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@status.errors.count, "error") %> prohibited this status from being saved:</h2>
@@ -11,11 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field form-group">
-    <%= f.label :content %><br>
-    <%= f.text_area :content, class: "form-control", rows: 3 %>
+  <%= f.input :content %>
+  <div class="form-group">
+    <div class="col-sm-offset-3 col-sm-10">
+      <%= f.button :submit %>
+    </div>
   </div>
-  <div class="actions form-group">
-    <%= f.submit class: "btn btn-primary" %>
-  </div>
+
 <% end %>
