--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -11,6 +11,7 @@
     </div>
   <% end %>
 
+  <%= f.input :user_id %>
   <%= f.input :content %>
   <div class="form-group">
     <div class="col-sm-offset-3 col-sm-10">
