--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,45 +1,23 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h2>Sign up</h2>
-  </div>
-  <div class="panel-body">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<div class="row">
+  <div class="col-md-4">
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "well"}) do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="form-group">
-        <%= f.label  :first_name %>
-        <%= f.text_field :first_name, class: "form-control" %>
-      </div>
+      <fieldset>
+        <legend>Sing up</legend>
+        <%= f.input :first_name %>
+        <%= f.input :last_name %>
+        <%= f.input :profile_name %>
+        <%= f.input :email %>
+        <%= f.input :password %>
+        <%= f.input :password_confirmation %>
 
-      <div class="form-group">
-        <%= f.label :last_name %>
-        <%= f.text_field :last_name, class: "form-control" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :profile_name %>
-        <%= f.text_field :profile_name, class: "form-control" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: "form-control" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
-      </div>
-
-      <div><%= f.submit "Sign up", class: "btn btn-primary" %></div>
+        <div><%= f.button :submit, "Sign up" %></div>
+      </fieldset>
     <% end %>
-  </div>
-  <div class="panel-footer">
     <%= render "devise/shared/links" %>
+  </div>
+  <div class="col-md-8">
+    <h2>Signing up is easy and secure</h2>
   </div>
 </div>
