--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -6,6 +6,7 @@
 	<div class="col-md-offset-2 col-md-8">
 		<div class="panel panel-default">
 			<div class="panel-heading center">
+        <%= @status.user.full_name %> | <strong><%= @status.user.profile_name %></strong>
 			</div>
 			<div class="panel-body">
 				<p><%= @status.content %></p>
