--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,12 @@
 
 	<%= render 'layouts/header' %>
 	<div class="container">
-  <% flash.each do |name, msg| %>
+<!--     <% flash.each do |name, msg| %>
       <%= content_tag(:div, msg, class: "alert alert-info") %>
-    <% end %>
+    <% end %> -->
+
+    <%= render 'layouts/messages' %>
+
 		<%= yield %>
 	</div>
 
