--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,16 +12,16 @@
 	  </div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	    <ul class="nav navbar-nav navbar-right">
-	      <li><%= link_to 'Home', statuses_path %></li>
+	      <li><%= link_to 'All Statuses', feed_path %></li>
 	      <% if user_signed_in? %>
          <li><button type="button" class="btn btn-default navbar-btn"><%= link_to new_status_path do %>
             <span class="glyphicon glyphicon-plus"></span> New Status
           <% end %></button></li>
-          <li><%= link_to current_user.full_name, edit_user_registration_path %></li>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to current_user.full_name, account_path %></li>
+          <li><%= link_to "Log out", logout_path %></li>
         <% else %>
-          <li><%= link_to "Sign-In", new_user_session_path %></li>
-          <li><%= link_to "Sign-Up", new_user_registration_path %></li>
+          <li><%= link_to "Sign-In", login_path %></li>
+          <li><%= link_to "Sign-Up", register_path %></li>
         <% end %>
 	    </ul>
 	  </div><!-- /.navbar-collapse -->
