--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -18,6 +18,13 @@ $jumbotron-bg:                                         white;
 	float: right;
 }
 
+.avatar {
+	margin: left;
+	-webkit-box-shadow: 4px 4px 0px 0px rgba(54, 146, 153, 0.75);
+	-moz-box-shadow:    4px 4px 0px 0px rgba(54, 146, 153, 0.75);
+	box-shadow:         4px 4px 0px 0px rgba(54, 146, 153, 0.75);
+}
+
 .time {
 	text-decoration: none;
 	color: white;
