--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -12,6 +12,7 @@
     <div class="col-xs-6 col-md-3">
       <div class="box panel panel-primary">
         <div class="panel-heading center">
+        <%= image_tag status.user.gravatar_url, class: "avatar" %>
           <%= status.user.profile_name %>
         </div>
         <div class="panel-body">
